# Hors

./: CMakeLists.txt  README.md
Samples/: CMakeLists.txt  SSAO.cpp  ssao.json
Test/: CMakeLists.txt  DataGenerator.cpp  DataGenerator.h  TestSkeletonVisualizer.cpp  TestSurfaceVisualizer.cpp  config.json  main.cpp
build_tools/: shader_packer.py
include/: BaseArgumentsClasses.h  BaseMesh.h  Camera.h  GLResourceWrappers.h  HorsArgumentParser.h  HorsConfig.cpp  HorsConfig.h  HorsProgram.h  HydraExport.h  LiteMath.h  SceneProperties.h  SimpleSceneData.h  SkeletonVisualizer.h  SurfaceVisualizer.h  Utils.h
shaders/: SSAO.frag  SimpleGBuffer.frag  SimpleGBuffer.vert  Skeleton.frag  Skeleton.vert  Surface.vert  shader_list.txt
src/: BaseMesh.cpp  Camera.cpp  HorsArgumentParser.cpp  HorsConfig.cpp  HorsProgram.cpp  HydraExport.cpp  SceneProperties.cpp  SimpleSceneData.cpp  SkeletonVisualizer.cpp  SurfaceVisualizer.cpp  Utils.cpp
